# CSV_to_video_convertor

./: .gitignore  README.md  benchmark.py  main.py  plot_benchmarks.py  pyproject.toml  queries.yaml  requirements.txt
csv-to-video-genarator-main/: Big_Video_From_CsV.ipynb  Notebook.ipynb  Oneclickvideo.ipynb  Untitled.ipynb  answer.py  app.py  azure.py  requirements.txt
data/: sample_data.csv
databases/: base.py  milvus_client.py  pinecone_client.py  qdrant_client.py  sqlite_client.py  topk_client.py  weaviate_client.py
embeddings/: embed.py
scripts/: docker-compose.yml
ui/backend/: server.py
ui/frontend/: app.js  index.html  styles.css
utils/: metrics.py
