[project]
name = "vector-db-benchmark-for-music-semantic-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "google-api-core>=2.25.1",
    "googleapis-common-protos>=1.70.0",
    "matplotlib>=3.10.6",
    "mplcyberpunk>=0.7.6",
    "numpy>=2.3.2",
    "openai>=1.104.2",
    "pandas>=2.3.2",
    "pinecone>=7.3.0",
    "protobuf>=6.32.0",
    "pyarrow>=21.0.0",
    "pymilvus>=2.6.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.0",
    "sqlite-vec>=0.1.6",
    "topk-sdk>=0.5.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
    "weaviate-client>=4.16.9",
    "yaspin>=3.1.0",
]
